# swarm-automations

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  screenshot_tool.py  stt_tool.py
scripts/: __init__.py  call_to_notion.sh  computer_use.sh  listen_smartwatch.sh  personal_server.sh  porcast_generation.sh  security_server.sh  standby.sh  swarm_automations_cli.sh  system_monitor.sh  test_security_server.sh  youtube_to_notion.sh
swarmautomations/: config.py  dev.py  main.py  main2.py  test.py
swarmautomations/configs/: base_config.py  config.py  selector_config.py  test_config.py
swarmautomations/development/: dev_script_v0.py  dev_v0.py
swarmautomations/modules/: automatic_summarizer.py  call_recording_pipeline.py  cli.py  code_interpreter.py  intelligent_web_search.py  main_class_tool_adapter.py  podcast_generation.py  real_time_transcriptor.py  session_recorder.py  standby.py  transcriptor.py  youtube_utils.py
tests/: test_main.py
tests/modules/: test_automatic_summarizer.py  test_call_recording_pipeline.py  test_cli.py  test_code_interpreter.py  test_intelligent_web_search.py  test_main_class_tool_adapter.py  test_podcast_generation.py  test_standby.py
